Fixed center alignment issue

--- a/src/app/components/Landing/Sections/Hero/Hero.css
+++ b/src/app/components/Landing/Sections/Hero/Hero.css
@@ -152,6 +152,7 @@
 
 .landingPageHeroFormCaptcha {
     justify-items: center;
+    margin: 0 auto;
 }
 
 /* =========================
